tests/fixtures/fail/throw_without_value.sc
let fail(): i32 with(throws(bool)) = {
  throw
}

let main(): i32 = 42
